@@ -970,6 +970,9 @@ int auth_setpw( struct vqpasswd *inpw, char *domain ) {
        }
 #endif
 
+	if (!(strcasecmp(inpw->pw_shell, "NOQUOTA")))
+	   remove_maildirsize(inpw->pw_dir);
+
     return VA_SUCCESS;
 }
 
